# quantitative-trading-framework

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
research/: momentum_analysis.ipynb
scripts/: run_backtest.py
src/: __init__.py
src/analytics/: metrics.py
src/backtesting/: engine.py
src/data/: market_data.py
src/portfolio/: optimizer.py
src/risk/: manager.py
src/strategies/: base.py  mean_reversion.py  momentum.py
tests/: test_strategies.py
